[package]
name = "homie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.6.10"
tokio = { version = "1.26.0", features = ["full"] }
tokio-tungstenite = "0.18"
futures-util = "0.3.26"
futures = "0.3"
diesel = { version = "2.0.0", features = ["sqlite"] }
